--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container mt-4">
     <h1 class="display-4 text-center">
-      <i class="fas fa-book-open text-primary"></i> My<span class="text-primary">Book</span>List</h1>
+       My<span class="text-primary">Book</span>List</h1>
       <form id="book-form">
         <div id="alertMessage" style="display: none" class="alert alert-danger" role="alert"></div>
         <div class="form-group">
