--- a/index2.html
+++ b/index2.html
@@ -28,7 +28,14 @@
           <label for="date">Published at:</label>
           <input type="date" id="date" class="form-control">
         </div>
-        <input type="submit" value="Add Book" class="btn btn-primary btn-block">
+        <!-- <div class="form-group">
+          <label for="status">Status</label>
+          <select type="text" id="status" class="form-control">
+            <option value=""></option>
+            <option value="">To read</option>
+            <option value="">Read</option>
+        </div> -->
+        <input type="submit" value="Add Book" class="btn btn-primary btn-block my-5">
       </form>
       <div class="row">
         <div class="col">
@@ -36,6 +43,7 @@
                 <li class="list-group-item mt-2">
                     <div class="d-flex w-100 mt-2 justify-content-between align-items-center">
                         <h5>My First book</h5>
+                        <span class="badge badge-danger">To Read</span>
                     </div>
                     <div class="d-flex w-100 mb-3 justify-content-between">
                         <small>Author: Laize</small>
@@ -43,6 +51,7 @@
                     </div>
                     <div class="d-flex w-100 mt-3 justify-content-between align-items-center">
                       <small>Published: 24/02/2013</small>
+                      <button class="btn btn-outline-success done-button">Mark As Read</button>                    
                     </div>
                 </li>
             </ul>
