--- a/index2.html
+++ b/index2.html
@@ -43,7 +43,7 @@
                 <li class="list-group-item mt-2">
                     <div class="d-flex w-100 mt-2 justify-content-between align-items-center">
                         <h5>My First book</h5>
-                        <span class="badge badge-danger">To Read</span>
+                        <span class="badge badge-danger">TO READ</span>
                     </div>
                     <div class="d-flex w-100 mb-3 justify-content-between">
                         <small>Author: Laize</small>
