--- a/index3.html
+++ b/index3.html
@@ -36,6 +36,7 @@
                 <li class="list-group-item mt-2">
                     <div class="d-flex w-100 mt-2 justify-content-between align-items-center">
                         <h5>My First book</h5>
+                        <span class="badge badge-danger">TO READ</span>
                     </div>
                     <div class="d-flex w-100 mb-3 justify-content-between">
                         <small>Author: Laize</small>
@@ -43,6 +44,7 @@
                     </div>
                     <div class="d-flex w-100 mt-3 justify-content-between align-items-center">
                       <small>Published: 24/02/2013</small>
+                      <button class="btn btn-outline-success done-button">Mark As Read</button>
                     </div>
                 </li>
             </ul>
